syntax = "proto3";

package proto;

import "gogoproto/gogo.proto";
import "cosmos/staking/v1beta1/staking.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "github.com/babylonchain/btc-validator/validator/proto";

service BtcValidators {
    // GetInfo returns the information of the daemon
    rpc GetInfo (GetInfoRequest) returns (GetInfoResponse);

    // CreateValidator generates and saves a validator object
    rpc CreateValidator (CreateValidatorRequest)
        returns (CreateValidatorResponse);

    // RegisterValidator sends a transactions to Babylon to register a BTC
    // validator
    rpc RegisterValidator (RegisterValidatorRequest)
        returns (RegisterValidatorResponse);

    // AddFinalitySignature sends a transactions to Babylon to add a Finality
    // signature for a block
    rpc AddFinalitySignature(AddFinalitySignatureRequest)
        returns (AddFinalitySignatureResponse);

    // QueryValidator queries the validator
    rpc QueryValidator (QueryValidatorRequest) returns (QueryValidatorResponse);
    // QueryValidatorList queries a list of validators
    rpc QueryValidatorList (QueryValidatorListRequest)
        returns (QueryValidatorListResponse);
}

message GetInfoRequest {
}

message GetInfoResponse {
    string version = 1;
}

message CreateValidatorRequest {
    // key_name is the identifier key in keyring
    string key_name = 1;
    // passphrase is used to encrypt the keys
    string passphrase = 2;
    // hd_path is the hd path for private key derivation
    string hd_path = 3;
    // chain_id is the identifier of the consumer chain that the validator connected to
    string chain_id = 4;
    // description defines the description terms for the validator
    bytes description = 5;
    // commission defines the commission rate for the validator
    string commission = 6 [
        (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
        (gogoproto.nullable)   = false
    ];
}

message CreateValidatorResponse {
    // btc_pk is the hex string of BTC secp256k1 public key of the validator encoded in BIP-340 spec
    string btc_pk = 1;
}

message RegisterValidatorRequest {
    // btc_pk is hex string of the BTC secp256k1 public key of the validator encoded in BIP-340 spec
    string btc_pk = 1;
    // passphrase is used to encrypt the keys
    string passphrase = 2;
}

message RegisterValidatorResponse {
    // hash of the successful Babylon registration transaction
    string tx_hash = 1;
}

message AddFinalitySignatureRequest {
    // btc_pk is hex string of the BTC secp256k1 public key of the validator encoded in BIP-340 spec
    string btc_pk = 1;
    // height is the height of the Babylon block
    uint64 height = 2;
    // app_hash is the AppHash of the Babylon block
    bytes app_hash = 3;
}

message AddFinalitySignatureResponse {
    // hash of the successful Babylon finality signature submission transaction
    string tx_hash = 1;
    // the hex string of the extracted Bitcoin secp256k1 private key
    string extracted_sk_hex = 2;
    // the hex string of the local Bitcoin secp256k1 private key
    string local_sk_hex = 3;
}

message QueryValidatorRequest {
    // btc_pk is hex string of the BTC secp256k1 public key of the validator encoded in BIP-340 spec
    string btc_pk = 1;
}

message QueryValidatorResponse {
    ValidatorInfo validator = 1;
}

message QueryValidatorListRequest {
    // TODO add pagination in case the list gets large
}

message QueryValidatorListResponse {
    repeated ValidatorInfo validators = 1;
    // TODO add pagination in case the list gets large
}

message StoreValidator {
    // babylon_pk is the Babylon secp256k1 PK of this BTC validator
    bytes babylon_pk = 1;
    // btc_pk is the BTC secp256k1 PK of the validator encoded in BIP-340 spec
    bytes btc_pk = 2;
    // description defines the description terms for the validator
    bytes description = 3;
    // commission defines the commission rate for the validator
    string commission = 4 [
        (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
        (gogoproto.nullable)   = false
    ];
    // pop is the proof of possession of babylon_pk and btc_pk
    ProofOfPossession pop = 5;
    // key_name is the identifier of the keyring
    string key_name = 6;
    // chain_id is the identifier of the consumer chain that the validator connected to
    string chain_id = 7;
    // last_voted_height defines the height of the last voted Babylon block
    uint64 last_voted_height = 8;
    // last_committed_height defines the height of the last Babylon block
    // to which the validator committed a randomness pair
    uint64 last_committed_height = 9;
    // last_processed_height defines the height of the last successfully processed block
    // even though the vote is not cast
    uint64 last_processed_height = 10;
    // status defines the current validator status
    ValidatorStatus status = 11;
}

// ValidatorInfo is the basic information of a validator mainly for external usage
message ValidatorInfo {
    // babylon_pk_hex is the hex string of the Babylon secp256k1 PK of this BTC validator
    string babylon_pk_hex = 1;
    // btc_pk_hex is the hex string of the BTC secp256k1 PK of the validator encoded in BIP-340 spec
    string btc_pk_hex = 2;
    // description defines the description terms for the validator
    bytes description = 3;
    // commission defines the commission rate for the validator
    string commission = 4 [
        (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
        (gogoproto.nullable)   = false
    ];
    // last_voted_height defines the height of the last voted Babylon block
    uint64 last_voted_height = 5;
    // last_committed_height defines the height of the last Babylon block
    // to which the validator committed a randomness pair
    uint64 last_committed_height = 6;
    // status defines the current validator status
    ValidatorStatus status = 7;
}

// ProofOfPossession is the proof of possession that a Babylon secp256k1
// secret key and a Bitcoin secp256k1 secret key are held by the same
// person
message ProofOfPossession {
    // babylon_sig is the signature generated via sign(sk_babylon, pk_btc)
    bytes babylon_sig = 1;
    // btc_sig is the signature generated via sign(sk_btc, babylon_sig)
    // the signature follows encoding in BIP-340 spec
    bytes btc_sig = 2;
}

message SchnorrRandPair {
    bytes pub_rand = 1;
    bytes sec_rand = 2;
}

// ValidatorStatus is the status of a BTC validator
// a Validator object has 4 states:
//  - Created - created and managed by validator client, not registered to
//  babylon yet
//  - Registered - created and registered to Babylon, but not voting yet (No
//  delegated stake)
//  - Active - created and registered to Babylon with stake to vote
//  - Inactive - created and registered to Babylon with no stake to vote.
//  Validator was already active.
// Valid State Transactions:
//  - Created   -> Registered
//  - Registered -> Active
//  - Active    -> Inactive
//  - Inactive  -> Active
enum ValidatorStatus {
    option (gogoproto.goproto_enum_prefix) = false;

    // CREATED defines a validator that is awaiting registration
    CREATED = 0 [(gogoproto.enumvalue_customname) = "CREATED"];
    // REGISTERED defines a validator that has been registered
    // to Babylon but has no delegated stake
    REGISTERED = 1 [(gogoproto.enumvalue_customname) = "REGISTERED"];
    // ACTIVE defines a validator that is delegated to vote
    ACTIVE = 2 [(gogoproto.enumvalue_customname) = "ACTIVE"];
    // INACTIVE defines a validator whose delegations are reduced to zero but not slashed
    INACTIVE = 3 [(gogoproto.enumvalue_customname) = "INACTIVE"];
    // SLASHED defines a validator that has been slashed
    SLASHED = 4 [(gogoproto.enumvalue_customname) = "SLASHED"];
}
